--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "license": {
     "type": "MIT",
-    "url": "http://github.com/mcavallo/alfred-color-name/raw/master/LICENSE"
+    "url": "https://raw.githubusercontent.com/mcavallo/alfred-color-name/master/LICENSE"
   },
   "main": "main.js",
   "dependencies": {
